[gd_scene format=3 uid="uid://d1cwetteunedl"]

[ext_resource type="Script" uid="uid://jyvkotl0jjoc" path="res://Mazes/maze_2/maze_2.gd" id="1_g45pf"]
[ext_resource type="PackedScene" uid="uid://bty438n0cr3oo" path="res://Player/player.tscn" id="1_l644i"]
[ext_resource type="PackedScene" uid="uid://dwkrxrjypyb6w" path="res://Mazes/maze_2/riddle_screen.tscn" id="2_8rkck"]
[ext_resource type="Script" uid="uid://b0rvkqyy5pmpb" path="res://Mazes/maze_2/sphynx.gd" id="3_n78rp"]
[ext_resource type="PackedScene" uid="uid://buqv5ewa16yg0" path="res://Mazes/maze_2/end_of_level_2.tscn" id="5_n78rp"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_8rkck"]
sky_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)
ground_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)

[sub_resource type="Sky" id="Sky_itefq"]
sky_material = SubResource("ProceduralSkyMaterial_8rkck")

[sub_resource type="Environment" id="Environment_f2jbi"]
background_mode = 2
sky = SubResource("Sky_itefq")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gnxx4"]
albedo_color = Color(0.32941177, 0.25490198, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_g45pf"]
albedo_color = Color(0.015686275, 0.4117647, 0.07058824, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_n78rp"]
albedo_color = Color(0.01640001, 0.41, 0.068880044, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_l644i"]
albedo_color = Color(0.45, 0.24000001, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8rkck"]
albedo_color = Color(0.8833333, 1, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_g45pf"]
font_size = 50

[node name="maze_2" type="Node3D" unique_id=1155560593]
script = ExtResource("1_g45pf")

[node name="WorldEnvironment" type="WorldEnvironment" parent="." unique_id=147746581]
environment = SubResource("Environment_f2jbi")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="." unique_id=1514123366]
transform = Transform3D(-0.9593272, -0.28215522, -0.008930296, -0.00088755786, -0.028619409, 0.99959004, -0.28229505, 0.9589418, 0.02720493, 0, 9.915155, 0)
shadow_enabled = true

[node name="Player" parent="." unique_id=230167780 instance=ExtResource("1_l644i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0520182, 23.431646)

[node name="floor" type="CSGBox3D" parent="." unique_id=1233057568]
transform = Transform3D(50, 0, 0, 0, 5, 0, 0, 0, 50, -0.035640717, -2.490415, -0.00021982193)
material = SubResource("StandardMaterial3D_gnxx4")

[node name="floor2" type="CSGBox3D" parent="." unique_id=411982530]
transform = Transform3D(50, 0, 0, 0, 5, 0, 0, 0, 50, -0.035640717, 7.5040536, -0.00021982193)
material = SubResource("StandardMaterial3D_g45pf")

[node name="walls" type="Node3D" parent="." unique_id=1673710832]

[node name="CSGBox3D" type="CSGBox3D" parent="walls" unique_id=1678560610 groups=["wall"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 24.501488, 2.550482, -0.0016613007)
use_collision = true
size = Vector3(1, 5.0981445, 50.01062)
material = SubResource("StandardMaterial3D_n78rp")

[node name="CSGBox3D2" type="CSGBox3D" parent="walls" unique_id=1168823959 groups=["wall"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -24.517197, 2.5332417, -0.0033226013)
use_collision = true
size = Vector3(1, 5.0981445, 50.01062)
material = SubResource("StandardMaterial3D_n78rp")

[node name="CSGBox3D3" type="CSGBox3D" parent="walls" unique_id=323023392 groups=["wall"]]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, -0.016197205, 2.5332417, -25.15562)
use_collision = true
size = Vector3(1, 5.0981445, 50.01062)
material = SubResource("StandardMaterial3D_n78rp")

[node name="CSGBox3D4" type="CSGBox3D" parent="walls" unique_id=484000891 groups=["wall"]]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 0.4904251, 2.5100558, 24.486254)
use_collision = true
size = Vector3(1, 5.0981445, 49.171074)
material = SubResource("StandardMaterial3D_n78rp")

[node name="CSGBox3D5" type="CSGBox3D" parent="walls" unique_id=25718249 groups=["wall"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.8120232, 2.550482, 12.5732765)
use_collision = true
size = Vector3(1, 5.0981445, 24.860744)
material = SubResource("StandardMaterial3D_n78rp")

[node name="CSGBox3D6" type="CSGBox3D" parent="walls" unique_id=1282231489 groups=["wall"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.1730723, 2.550482, 12.498049)
use_collision = true
size = Vector3(1, 5.0981445, 25.0112)
material = SubResource("StandardMaterial3D_n78rp")

[node name="CSGBox3D7" type="CSGBox3D" parent="walls" unique_id=2051798025 groups=["wall"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.8120232, 2.550482, -13.545586)
use_collision = true
size = Vector3(1, 5.0981445, 23.123222)
material = SubResource("StandardMaterial3D_n78rp")

[node name="CSGBox3D8" type="CSGBox3D" parent="walls" unique_id=426808638 groups=["wall"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.07483, 2.550482, -13.6009445)
use_collision = true
size = Vector3(1, 5.0981445, 23.012505)
material = SubResource("StandardMaterial3D_n78rp")

[node name="CSGBox3D10" type="CSGBox3D" parent="walls" unique_id=2007220612 groups=["wall"]]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, -6.618175, 2.550482, 0.41968727)
use_collision = true
size = Vector3(1, 5.0981445, 7.8792486)
material = SubResource("StandardMaterial3D_n78rp")

[node name="CSGBox3D11" type="CSGBox3D" parent="walls" unique_id=1779182259 groups=["wall"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10.059014, 2.550482, 2.5157318)
use_collision = true
size = Vector3(1, 5.0981445, 5.046566)
material = SubResource("StandardMaterial3D_n78rp")

[node name="CSGBox3D13" type="CSGBox3D" parent="walls" unique_id=2038332884 groups=["wall"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -17.20882, 2.550482, 2.5157318)
use_collision = true
size = Vector3(1, 5.0981445, 5.046566)
material = SubResource("StandardMaterial3D_n78rp")

[node name="CSGBox3D12" type="CSGBox3D" parent="walls" unique_id=1099974873 groups=["wall"]]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, -6.5854664, 2.550482, 4.5462413)
use_collision = true
size = Vector3(1, 5.0981445, 5.9108114)
material = SubResource("StandardMaterial3D_n78rp")

[node name="CSGBox3D14" type="CSGBox3D" parent="walls" unique_id=2005955153 groups=["wall"]]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, -20.940329, 2.550482, 0.45295152)
use_collision = true
size = Vector3(0.9334717, 5.0981445, 6.4866214)
material = SubResource("StandardMaterial3D_n78rp")

[node name="CSGBox3D15" type="CSGBox3D" parent="walls" unique_id=781416396 groups=["wall"]]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, -20.8525, 2.550482, 4.5462413)
use_collision = true
size = Vector3(1, 5.0981445, 6.4798484)
material = SubResource("StandardMaterial3D_n78rp")

[node name="CSGBox3D16" type="CSGBox3D" parent="walls" unique_id=1132343487 groups=["wall"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -17.20882, 2.550482, -4.846453)
use_collision = true
size = Vector3(1, 5.0981445, 5.046566)
material = SubResource("StandardMaterial3D_n78rp")

[node name="CSGBox3D17" type="CSGBox3D" parent="walls" unique_id=76463131 groups=["wall"]]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, -20.940329, 2.550482, -6.8699727)
use_collision = true
size = Vector3(1, 5.0981445, 6.4866214)
material = SubResource("StandardMaterial3D_n78rp")

[node name="CSGBox3D18" type="CSGBox3D" parent="walls" unique_id=1615124097 groups=["wall"]]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, -20.8525, 2.550482, -2.8159437)
use_collision = true
size = Vector3(1, 5.0981445, 6.4798484)
material = SubResource("StandardMaterial3D_n78rp")

[node name="CSGBox3D19" type="CSGBox3D" parent="walls" unique_id=214315687 groups=["wall"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.959717, 2.550482, -4.645801)
use_collision = true
size = Vector3(1, 5.0981445, 5.046566)
material = SubResource("StandardMaterial3D_n78rp")

[node name="CSGBox3D20" type="CSGBox3D" parent="walls" unique_id=1531454651 groups=["wall"]]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, -6.7609797, 2.550482, -6.7418456)
use_collision = true
size = Vector3(1, 5.0981445, 7.3775883)
material = SubResource("StandardMaterial3D_n78rp")

[node name="CSGBox3D21" type="CSGBox3D" parent="walls" unique_id=1070095943 groups=["wall"]]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, -6.797435, 2.550482, -2.6152916)
use_collision = true
size = Vector3(1, 5.0981445, 7.1222486)
material = SubResource("StandardMaterial3D_n78rp")

[node name="CSGBox3D22" type="CSGBox3D" parent="walls" unique_id=1483017328 groups=["wall"]]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 20.430815, 2.550482, 0.68497515)
use_collision = true
size = Vector3(1, 5.0981445, 7.736182)
material = SubResource("StandardMaterial3D_n78rp")

[node name="CSGBox3D23" type="CSGBox3D" parent="walls" unique_id=1578805613 groups=["wall"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 17.061508, 2.550482, 2.7810197)
use_collision = true
size = Vector3(1, 5.0981445, 5.046566)
material = SubResource("StandardMaterial3D_n78rp")

[node name="CSGBox3D24" type="CSGBox3D" parent="walls" unique_id=1805577561 groups=["wall"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.911703, 2.550482, 2.724549)
use_collision = true
size = Vector3(1, 5.0981445, 5.1595073)
material = SubResource("StandardMaterial3D_n78rp")

[node name="CSGBox3D25" type="CSGBox3D" parent="walls" unique_id=931307851 groups=["wall"]]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 20.948467, 2.550482, 4.811529)
use_collision = true
size = Vector3(1, 5.0981445, 6.7376323)
material = SubResource("StandardMaterial3D_n78rp")

[node name="CSGBox3D26" type="CSGBox3D" parent="walls" unique_id=421214221 groups=["wall"]]
transform = Transform3D(6.907575e-05, -1.936921e-06, 1, 0.000100722405, 1, 1.9369254e-06, -1, 0.000100722405, 6.907575e-05, 6.180195, 2.550482, 0.6513275)
use_collision = true
size = Vector3(1, 5.0981445, 6.4866214)
material = SubResource("StandardMaterial3D_n78rp")

[node name="CSGBox3D27" type="CSGBox3D" parent="walls" unique_id=1967445655 groups=["wall"]]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 6.2680225, 2.550482, 4.811529)
use_collision = true
size = Vector3(1, 5.0981445, 6.4798484)
material = SubResource("StandardMaterial3D_n78rp")

[node name="CSGBox3D28" type="CSGBox3D" parent="walls" unique_id=942307688 groups=["wall"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.911703, 2.550482, -4.5823474)
use_collision = true
size = Vector3(1, 5.0981445, 5.187911)
material = SubResource("StandardMaterial3D_n78rp")

[node name="CSGBox3D29" type="CSGBox3D" parent="walls" unique_id=856963398 groups=["wall"]]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 6.180195, 2.550482, -6.67721)
use_collision = true
size = Vector3(1, 5.0981445, 6.4866214)
material = SubResource("StandardMaterial3D_n78rp")

[node name="CSGBox3D30" type="CSGBox3D" parent="walls" unique_id=1332332028 groups=["wall"]]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 6.2680225, 2.550482, -2.4823952)
use_collision = true
size = Vector3(1, 5.0981445, 6.4798484)
material = SubResource("StandardMaterial3D_n78rp")

[node name="CSGBox3D31" type="CSGBox3D" parent="walls" unique_id=21561609 groups=["wall"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 17.160807, 2.550482, -4.380513)
use_collision = true
size = Vector3(1, 5.0981445, 5.046566)
material = SubResource("StandardMaterial3D_n78rp")

[node name="CSGBox3D32" type="CSGBox3D" parent="walls" unique_id=855235867 groups=["wall"]]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 20.359543, 2.550482, -6.4765577)
use_collision = true
size = Vector3(1, 5.0981445, 7.3775883)
material = SubResource("StandardMaterial3D_n78rp")

[node name="CSGBox3D33" type="CSGBox3D" parent="walls" unique_id=1604914141 groups=["wall"]]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 20.454088, 2.550482, -2.3500037)
use_collision = true
size = Vector3(1, 5.0981445, 7.3842444)
material = SubResource("StandardMaterial3D_n78rp")

[node name="door" type="CSGBox3D" parent="." unique_id=1176164670 groups=["door"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.21087205, 2.5365705, -24.124596)
use_collision = true
size = Vector3(5.124756, 5.0775757, 1)
material = SubResource("StandardMaterial3D_l644i")

[node name="Sphynx_1" type="CSGBox3D" parent="." unique_id=564535214 groups=["sphynx"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13.531065, 1.7703977, 21.122553)
use_collision = true
size = Vector3(7.70636, 3.7733154, 5.8061523)
material = SubResource("StandardMaterial3D_8rkck")
script = ExtResource("3_n78rp")

[node name="Sphynx_2" type="CSGBox3D" parent="." unique_id=596626635 groups=["sphynx"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.796806, 1.7703977, 21.122553)
use_collision = true
size = Vector3(7.70636, 3.7733154, 5.8061523)
material = SubResource("StandardMaterial3D_8rkck")
script = ExtResource("3_n78rp")
riddle = 2

[node name="Sphynx_3" type="CSGBox3D" parent="." unique_id=930428143 groups=["sphynx"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.527306, 1.7703977, -20.986168)
use_collision = true
size = Vector3(7.70636, 3.7733154, 5.8061523)
material = SubResource("StandardMaterial3D_8rkck")
script = ExtResource("3_n78rp")
riddle = 3

[node name="Sphynx_4" type="CSGBox3D" parent="." unique_id=1694482963 groups=["sphynx"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13.539656, 1.7703977, -20.986168)
use_collision = true
size = Vector3(7.70636, 3.7733154, 5.8061523)
material = SubResource("StandardMaterial3D_8rkck")
script = ExtResource("3_n78rp")
riddle = 4

[node name="riddle_screen" parent="." unique_id=1533599760 instance=ExtResource("2_8rkck")]
visible = false

[node name="Label3D" type="Label3D" parent="." unique_id=1105785447]
transform = Transform3D(1.1924881e-08, 0, -1, 0, 1, 0, 1, 0, 1.1924881e-08, 2.2713375, 3.0174475, -17.905724)
text = "Answer the the riddles in the four corners of the maze to unlock the door.
Be careful, for too many incorrect answers will result in the door being locked forevermore"

[node name="lock_1" type="CSGBox3D" parent="." unique_id=800315510]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.956295, 2.2617962, -23.63661)
size = Vector3(1, 1, 0.13330078)

[node name="lock_2" type="CSGBox3D" parent="." unique_id=1903629198]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.7951374, 2.2617962, -23.63661)
size = Vector3(1, 1, 0.13330078)

[node name="lock_3" type="CSGBox3D" parent="." unique_id=748865921]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.40106392, 2.2617962, -23.63661)
size = Vector3(1, 1, 0.13330078)

[node name="lock_4" type="CSGBox3D" parent="." unique_id=1413076838]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.6173296, 2.2617962, -23.63661)
size = Vector3(1, 1, 0.13330078)

[node name="lock_text" type="Label" parent="." unique_id=42847514]
modulate = Color(1, 1, 1, 0)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -363.0
offset_top = -23.0
offset_right = 363.0
grow_horizontal = 2
grow_vertical = 0
text = "You hear a lock open"
label_settings = SubResource("LabelSettings_g45pf")
horizontal_alignment = 1

[node name="end_of_level_2" parent="." unique_id=262553491 instance=ExtResource("5_n78rp")]
visible = false

[connection signal="hit_end" from="Player" to="." method="_on_player_hit_end"]
[connection signal="show_riddle" from="Player" to="." method="_on_player_show_riddle"]
[connection signal="close" from="riddle_screen" to="." method="_on_riddle_screen_close"]
